# nilearn-extra

./: LICENSE  README.md  meta.yaml  pyproject.toml
nilean_extra/connectome/: __init__.py  extra_connectivity_matrices.py
nilearn_extra/: __init__.py
nilearn_extra/connectome/: _chatterjee.py  _transfer_entropy.py
