[tool.poetry]
name = "nilearn-extra"
version = "0.1.0"
description = "Drop-in extra functionalities for nilearn (statistics for neuroimaging in Python)"
authors = ["Morteza Ansarinia <ansarinia@me.com>"]
license = "BSD 3-Clause"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
nilearn = "^0.9.1"
scipy = "^1.8"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
